# TerminalSnake

./: CMakeLists.txt  README.md  TODO.md  compile_commands.json
include/: food.hpp  game.hpp  snake.hpp
src/: food.cpp  game.cpp  main.cpp  snake.cpp
